--- a/style.css
+++ b/style.css
@@ -120,6 +120,7 @@ input[type=text], select, textarea {
 /* Style the links inside the pill navigation menu */
 .pill-nav a {
     display: inline-block;
+    background-color: lightgray;
     color: black;
     text-align: center;
     padding: 14px;
@@ -140,5 +141,28 @@ input[type=text], select, textarea {
     color: white;
   }
   
+  /* Create a Parallax Effect */
+.bgimg-1, .bgimg-2, .bgimg-3 {
+    background-attachment: fixed;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+  }
   
+  /* First image (Logo. Full height) */
+  .bgimg-1 {
+    background-image: url("Images/Where-to-Stay-in-Cincinnati.jpeg");
+    min-height: 100%;
+  }
   
+  /* Second image (Portfolio) */
+  .bgimg-2 {
+    background-image: url("/w3images/parallax2.jpg");
+    min-height: 400px;
+  }
+  
+  /* Third image (Contact) */
+  .bgimg-3 {
+    background-image: url("/w3images/parallax3.jpg");
+    min-height: 400px;
+  }
